--- a/base/templates/base/lobby.html
+++ b/base/templates/base/lobby.html
@@ -1,8 +1,17 @@
 {% extends 'base/main.html' %}
-
+{% load static %}
 {% block content %}
 
-<h2>Lobby</h2>
+<main>
+    <section id='form-container'>
+        <img id='logo' src="{% static 'images/chat-icon.png' %}">
+
+        <div>
+            <h1>Welcome to Mychat</h1>
+            <p>A group video calling application!</p>
+        </div>
+    </section>
+</main>
 
 
 {% endblock content %}
