--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,10 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Chat</title>
+    <link rel="stylesheet" href="{% static 'styles/main.css' %}">
 </head>
 
 <body>
-    <h1>Main template</h1>
     {% block content %}
     {% endblock content %}
 </body>
