--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -2,7 +2,18 @@
 
 {% block content %}
 
-<h2>Room</h2>
+<main>
+    <section id='room-name-wrapper'>
+        <p>Room Name: <span id='room-name'></span></p>
+    </section>
+
+    <section id='video-streams'>
+        <div class="video-container" id='user-container-1'>
+            <div class="username-wrapper"><span class="user-name">My name</span></div>
+            <div class="video-player" id="user-1"></div>
+        </div>
+    </section>
+</main>
 
 
 {% endblock content %}
